# functional-pascal

./: .gitignore  AGENTS.md  AI_CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist.ps1  dist.sh  skills-lock.json
crates/fpas-bytecode/: Cargo.toml
crates/fpas-bytecode/src/: chunk.rs  lib.rs  op.rs  value.rs
crates/fpas-bytecode/src/intrinsic/: decode.rs  mod.rs
crates/fpas-cli/: Cargo.toml
crates/fpas-cli/src/: cli_input.rs  cli_run.rs  main.rs  project.rs  test_support.rs
crates/fpas-cli/src/main_tests/: concurrency.rs  diagnostics.rs  input.rs  mod.rs  support.rs
crates/fpas-cli/src/main_tests/projects/: edge_cases.rs  errors.rs  mod.rs  qualified.rs  resolution.rs  run.rs  support.rs  warnings.rs
crates/fpas-cli/src/main_tests/stdlib/: array.rs  console.rs  conv.rs  dict.rs  math.rs  mod.rs  option.rs  result.rs  str.rs
crates/fpas-cli/src/main_tests/visibility/: ambiguity.rs  exports.rs  internals.rs  mod.rs  std_namespace.rs
crates/fpas-cli/src/project/: common.rs  loading.rs  model.rs  paths.rs
crates/fpas-cli/src/project/link/: graph.rs  imports.rs  mod.rs  parse.rs  rewrite.rs  support.rs
crates/fpas-cli/src/project/tests/: imports.rs  mod.rs  support.rs
crates/fpas-compiler/: Cargo.toml
crates/fpas-compiler/src/: error.rs  lib.rs
crates/fpas-compiler/src/compiler/: emit.rs  locals.rs  mod.rs  std_aliases.rs
crates/fpas-compiler/src/compiler/binary_op/: arithmetic.rs  comparisons.rs  mod.rs
crates/fpas-compiler/src/compiler/designator/: builtin_consts.rs  enum_consts.rs  mod.rs  read.rs  write.rs
crates/fpas-compiler/src/compiler/expr/: call.rs  mod.rs  special.rs
crates/fpas-compiler/src/compiler/program/: callables.rs  mod.rs
crates/fpas-compiler/src/compiler/std_calls/: array.rs  channel.rs  console.rs  conv.rs  dict.rs  math.rs  mod.rs  result_option.rs  str_ops.rs  task.rs  tui.rs
crates/fpas-compiler/src/compiler/stmt/: basic.rs  concurrency.rs  mod.rs
crates/fpas-compiler/src/tests/: arrays.rs  basics.rs  case_ranges.rs  char_type.rs  diagnostics.rs  expressions.rs  forward_declarations.rs  functions.rs  functions_errors.rs  interfaces.rs  mod.rs  nested_functions.rs  numeric_binary_ops.rs  routine_declarations.rs  type_aliases.rs  writeln_semantics.rs
crates/fpas-compiler/src/tests/case_of/: booleans.rs  edge_cases.rs  enums.rs  errors.rs  integers.rs  mod.rs  negative.rs  ranges.rs  strings.rs
crates/fpas-compiler/src/tests/closures/: captures.rs  errors.rs  lambdas.rs  mod.rs  named_functions.rs
crates/fpas-compiler/src/tests/control_flow/: basics.rs  loop_locals.rs  mod.rs  nested_mixed.rs  nested_same_kind.rs  three_deep.rs
crates/fpas-compiler/src/tests/enums/: basic.rs  data_construction.rs  errors.rs  mod.rs
crates/fpas-compiler/src/tests/generics/: aliases.rs  constraints.rs  edge_cases.rs  enums.rs  errors.rs  methods.rs  mixed.rs  mod.rs  records.rs
crates/fpas-compiler/src/tests/nested_patterns/: deep_nesting.rs  edge_cases.rs  errors.rs  guards.rs  mod.rs  value_constraints.rs
crates/fpas-compiler/src/tests/pattern_matching/: edge_cases.rs  guard_data_enum.rs  guard_errors.rs  guard_result_option.rs  mod.rs
crates/fpas-compiler/src/tests/records/: basics.rs  defaults.rs  errors.rs  methods.rs  mod.rs  refs.rs  self_calls.rs  with_update.rs
crates/fpas-compiler/src/tests/result_option/: case_destructuring.rs  combinators.rs  mod.rs  option_cases.rs  option_functions.rs  panic_handling.rs  reserved_keywords.rs  result_cases.rs  result_functions.rs  try_edge_cases.rs  try_operator.rs
crates/fpas-compiler/src/tests/short_names/: array.rs  console.rs  conv.rs  math.rs  mixed.rs  mod.rs
crates/fpas-compiler/src/tests/std_library/: array.rs  concurrency.rs  conv.rs  math.rs  mod.rs  str_ops.rs  tui.rs
crates/fpas-parser/: Cargo.toml
crates/fpas-parser/src/: error.rs  lib.rs
crates/fpas-parser/src/ast/: decl.rs  expr.rs  mod.rs  program.rs  routines.rs  stmt.rs  types.rs
crates/fpas-parser/src/parser/: core.rs  display.rs  mod.rs  program.rs
crates/fpas-parser/src/parser/decl/: mod.rs  routines.rs  (+1 more)
crates/fpas-parser/src/tests/: errors.rs  integration.rs  mod.rs
crates/fpas-project/: Cargo.toml
crates/fpas-project/src/: common.rs  lib.rs  loading.rs  model.rs  paths.rs
crates/fpas-project/src/link/: graph.rs  imports.rs  mod.rs  parse.rs  source_map.rs  support.rs
crates/fpas-sema/: Cargo.toml
crates/fpas-sema/src/: error.rs  lib.rs  scope.rs  std_units.rs  types.rs
crates/fpas-sema/src/check/: calls.rs  context.rs  entry.rs  mod.rs  spans.rs
crates/fpas-sema/src/std_registry/: aliases.rs  mod.rs
crates/fpas-sema/src/tests/: decl.rs  expr.rs  generic_methods.rs  interfaces.rs  mod.rs
crates/fpas-std/: Cargo.toml
crates/fpas-std/src/: array.rs  console_event.rs  conv.rs  dict.rs  error.rs  helpers.rs  intrinsics.rs  key_event.rs  lib.rs  math.rs  numeric_text.rs  result_option.rs  str.rs  tui.rs
crates/fpas-std/src/console/: input.rs  mod.rs  operations.rs  render.rs  tests.rs  validation.rs
crates/fpas-std/src/std_units/: mod.rs  units.rs
crates/fpas-vm/: Cargo.toml
crates/fpas-vm/src/: lib.rs
crates/fpas-vm/src/tests/: call_value.rs  globals.rs  helpers.rs  illformed.rs  index_and_records.rs  mod.rs  numeric.rs  pool_shutdown.rs  tasks.rs
crates/fpas-vm/src/vm/: diagnostics.rs  mod.rs  shared.rs  worker.rs
(+490 files in other folders)
