[workspace]
members = ["crates/*"]
exclude = ["crates/hall-vm"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/ArcticDev/functional-pascal"
description = "A modern, function-first programming language built on Pascal's readable syntax"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
