[package]
name = "fpas-bytecode"
description = "Bytecode definitions and chunk format for Functional Pascal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fpas-diagnostics = { path = "../fpas-diagnostics" }

[lints]
workspace = true

