[package]
name = "fpas-cli"
description = "Command-line interface for the Functional Pascal compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fpas"
path = "src/main.rs"

[dependencies]
fpas-parser = { path = "../fpas-parser" }
fpas-compiler = { path = "../fpas-compiler" }
fpas-diagnostics = { path = "../fpas-diagnostics" }
fpas-vm = { path = "../fpas-vm" }
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

[lints]
workspace = true

