[package]
name = "fpas-cli"
description = "Command-line interface for the Functional Pascal compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fpas"
path = "src/main.rs"

[dependencies]
fpas-project = { path = "../fpas-project" }
fpas-parser = { path = "../fpas-parser" }
fpas-compiler = { path = "../fpas-compiler" }
fpas-diagnostics = { path = "../fpas-diagnostics" }
fpas-vm = { path = "../fpas-vm" }

[lints]
workspace = true

