[package]
name = "fpas-project"
description = "Project loading and unit linking for the Functional Pascal compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fpas-diagnostics = { path = "../fpas-diagnostics" }
fpas-lexer = { path = "../fpas-lexer" }
fpas-parser = { path = "../fpas-parser" }
glob = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true